--- a/package.json
+++ b/package.json
@@ -23,8 +23,15 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-regular-svg-icons": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@material-tailwind/react": "^2.0.5",
         "@mui/material": "^5.13.5",
         "@mui/styled-engine-sc": "^5.12.0",
+        "babel-plugin-macros": "^3.1.0",
+        "react-icons": "^4.10.1",
         "react-select": "^5.7.3",
         "styled-components": "^5.3.11"
     }
